--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI = "mongodb://localhost:27017/youtube"
+MONGO_URI = "mongodb://admin:password@mongodb:27017"
 REDIS_URI = "rediss://default:AZtjAAIjcDFlMzRlMzYzMjdmYmE0MmM5YTdiNDU2Y2MzMjgwYjkzMXAxMA@united-bobcat-39779.upstash.io:6379"
 JWT_SECRET = "kjhfskjh^7^37&&635%hj+_9w7!@233#63"
